--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2018-10-23-10:09  gepr  <gepr@tempusdictum.com>
+
+	* amml.cps: Unit conversions to-from grams-mmol.  Find a reference for Kpl.  Still not getting the numbers to match, even within an order of magnitude.
+
 2018-10-19-12:33  gepr  <gepr@tempusdictum.com>
 
 	* amml.mml: Add the MathML exported equations.
