--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2018-10-24-10:23  gepr  <gepr@tempusdictum.com>
+
+	* amml.cps: Add notes for the sources of Qh, Qpv, Kpl, etc.  Add notes for conversions (e.g. from L/h/kg to ml/s/mmol).
+	Fix conversion of fbCLint where I was multiplying by 3600 instead of dividing by 3600.
+
 2018-10-23-10:09  gepr  <gepr@tempusdictum.com>
 
 	* amml.cps: Unit conversions to-from grams-mmol.  Find a reference for Kpl.  Still not getting the numbers to match, even within an order of magnitude.
